--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,8 @@ test:
 #
 production:
   <<: *default
-  database: afrizone_production
-  username: afrizone
-  password: <%= ENV['AFRIZONE_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: utf8
+  pool: 5
+  username: root
+  host: localhost
