--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,12 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# dotenv
+# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
+config/initializers/secret_token.rb
 
+
+# dotenv
+# TODO Comment out this rule if environment variables can be committed
 .env
 
 ## Environment normalization:
